# MTCNN

./: .gitmodules  CMakeLists.txt  README.md
src/: allocator.h  browse.h  main.cpp  mtcnn.cpp  mtcnn.h  net.cpp  stb_image.h  tiny_jpeg.h
src/ncnn/: blob.cpp  layer.cpp  layer.h  layer_type.h  mat.cpp  mat.h  mat_pixel.cpp  net.cpp  net.h  paramdict.cpp  paramdict.h  platform.h
src/ncnn/layer/: convolution.cpp  dropout.cpp  dropout.h  innerproduct.cpp  innerproduct.h  input.cpp  input.h  pooling.cpp  pooling.h  prelu.cpp  prelu.h  softmax.cpp  softmax.h  split.cpp  split.h
src/ncnn/layer/arm/: convolution_1x1.h  convolution_2x2.h  convolution_3x3.h  convolution_4x4.h  convolution_5x5.h  convolution_7x7.h  convolution_arm.cpp  convolution_arm.h  innerproduct_arm.cpp  innerproduct_arm.h  neon_mathfun.h  pooling_2x2.h  pooling_3x3.h  pooling_arm.cpp  prelu_arm.cpp  softmax_arm.cpp
src/ncnn/layer/x86/: avx_mathfun.h  convolution_3x3.h  convolution_5x5.h  convolution_x86.cpp  convolution_x86.h  sse_mathfun.h
